--- a/admin/partials/stationary/adStationary.html
+++ b/admin/partials/stationary/adStationary.html
@@ -277,7 +277,7 @@
                 <div class="entry full-width" ng-show="data.is_show_registration_card_button">
                     <label translate>REGISTRATION_TEMPLATE</label>
                     <div class="select">
-                        <select ng-model="data.selected_guest_registration_template" name="guest-bill-template" class="placeholder">
+                        <select convert-to-number ng-model="data.selected_guest_registration_template" name="guest-bill-template" class="placeholder">
                             <option value="" translate> SELECT_REGISTRATION_TEMPLATE </option>
                             <option ng-repeat="item in data.guest_registration_template" value="{{item.value}}" ng-selected="item.value == data.selected_guest_registration_template">{{item.name}}</option>
                         </select>
@@ -301,7 +301,7 @@
                      <ad-textbox styleclass="full-width" value="data.group_confirmation_email_subject" label="{{'GROUP_CONFIRMATION_EMAIL_SUBJECT'| translate}}" placeholder="{{'ENTER_SUBJECT'| translate}}"></ad-textbox>
                      <label for="email-hotel-logo" translate>HOLD_STATUS </label>
                     <div class="select">
-                        <select ng-model="data.groupholdstatus" name="email-hotel-logo" class="placeholder" ng-change="showConfirmationHeaderFooterBasedOnHoldStatus()">
+                        <select convert-to-number ng-model="data.groupholdstatus" name="email-hotel-logo" class="placeholder" ng-change="showConfirmationHeaderFooterBasedOnHoldStatus()">
                             <option value="" translate> SELECT_HOLD_STATUS </option>
                             <option ng-repeat="item in holdStatusList" value="{{item.id}}">{{item.name}}</option>
                         </select>
