--- a/admin/partials/chargeCodes/adChargeCodeDetailsForm.html
+++ b/admin/partials/chargeCodes/adChargeCodeDetailsForm.html
@@ -41,8 +41,8 @@
 						{{'FEES'| translate}}
 					</label>
 					<div class="select">
-						<select name="payment-type" ng-model="prefetchData.selected_fees_code">
-							<option value="">Select Fees</option>
+						<select convert-to-number name="payment-type" ng-model="prefetchData.selected_fees_code">
+							<option value="null">Select Fees</option>
 							<option value="{{feesCode.value}}" ng-selected="feesCode.value == prefetchData.selected_fees_code" ng-repeat="feesCode in prefetchData.fees_codes">
 							{{feesCode.name}} {{feesCode.description}}
 							</option>
