--- a/admin/partials/doorLockInterface/adDoorLockInterface.html
+++ b/admin/partials/doorLockInterface/adDoorLockInterface.html
@@ -21,9 +21,14 @@
 							<h3 translate>ROOM_KEY_SYSTEM_VENDOR</h3>
 							<em class="status"> Fields marked with <strong>*</strong> are mandatory! </em>
 						</div>
-						<ad-dropdown label="{{'ROOM_KEY_SYSTEM_VENDOR' | translate }}" label-in-drop-down="{{'ROOM_KEY_SYSTEM_VENDOR' | translate }}" list="data.key_systems" selected-Id='data.selected_key_system' required = "yes"></ad-dropdown>
+						<ad-select-number
+								label="{{'ROOM_KEY_SYSTEM_VENDOR' | translate }}"
+								label-in-drop-down="{{'ROOM_KEY_SYSTEM_VENDOR' | translate }}"
+								items="data.key_systems"
+								selected-id='data.selected_key_system'
+								required = "yes">
+						</ad-select-number>
 					</fieldset>
-
 
 					<fieldset>
 						<div class="form-title key-server-details-title">
