--- a/admin/partials/paymentMethods/adAddPaymentMethod.html
+++ b/admin/partials/paymentMethods/adAddPaymentMethod.html
@@ -21,7 +21,13 @@
 				<div ng-hide="!addData.is_cc">
 					<ad-checkbox is-checked="addData.is_offline" label="{{ 'OFFLINE' | translate}}" div-class="full-width"></ad-checkbox>
 				</div>
-				<ad-dropdown hide="addData.is_cc" list="data.reservation_types" selected-id='addData.linked_reservation_type_id' selbox-class="placeholder" div-class="full-width" label="{{'LINKED_RESERVATION_TYPE' | translate}}"></ad-dropdown>
+				<ad-select-number ng-hide="addData.is_cc"
+								  items="data.reservation_types"
+								  selected-id='addData.linked_reservation_type_id'
+								  selbox-class="placeholder"
+								  div-class="full-width"
+								  label="{{'LINKED_RESERVATION_TYPE' | translate}}">
+				</ad-select-number>
 
 				<ad-dropdown ng-show="addData.is_cc && data.allow_cc_processors_per_payment_methods" list="data.custom_cc_processors" selected-id='addData.custom_cc_processor_id' selbox-class="placeholder" div-class="full-width" label="{{'CREDIT_CARD_PROCESSOR' | translate}}"></ad-dropdown>
 			</fieldset>
