--- a/admin/partials/rateTypes/adRateTypeEdit.html
+++ b/admin/partials/rateTypes/adRateTypeEdit.html
@@ -14,8 +14,8 @@
                         RATE CLASSIFICATION
                     </label>
                     <div class="select">
-                        <select id="rate-classification" ng-model="rateTypeData.classification.id">
-                            <option value="" data-text="Not set" class="placeholder">Choose classification type</option>
+                        <select convert-to-number id="rate-classification" ng-model="rateTypeData.classification.id">
+                            <option value="undefined" data-text="Not set" class="placeholder">Choose classification type</option>
                             <option ng-repeat="classification in rateClassifications" value="{{classification.id}}">{{classification.description}}</option>
                         </select>
                     </div>
