--- a/admin/partials/rooms/adRoomDetails.html
+++ b/admin/partials/rooms/adRoomDetails.html
@@ -27,7 +27,15 @@
 
 				<ad-textbox value="data.max_occupancy" name="max-occupancy" id="max-occupancy" label="Max Occupancy " placeholder="Enter Max Occupancy" required=""></ad-textbox>
 
-				<ad-dropdown div-class='full-width' label-in-drop-down="{{ 'SELECT_FLOOR' | translate }}"label="{{ 'SELECT_FLOOR' | translate }}" sel-class='placeholder'  list='floors' required='yes' selected-Id='data.selected_floor'></ad-dropdown>
+				<ad-select-number
+						div-class='full-width'
+						label-in-drop-down="{{ 'SELECT_FLOOR' | translate }}"
+						label="{{ 'SELECT_FLOOR' | translate }}"
+						sel-class='placeholder'
+						items='floors'
+						required='yes'
+						selected-id='data.selected_floor'>
+				</ad-select-number>
 
 
 
