--- a/rover/partials/endOfDay/rvEndOfDayModal.html
+++ b/rover/partials/endOfDay/rvEndOfDayModal.html
@@ -2,16 +2,16 @@
 <button type="button" id="modal-close"  ng-click="cancelClicked()" class="modal-close">
 		<span class="icons icon-close invert"></span>
 </button>
-<div class="modal-content new-content form warning padding-30" ng-show="!isTimePastMidnight">
+<div class="modal-content new-content form warning padding-30" ng-if="!isTimePastMidnight">
 	 <div class="padding-30 end-of-day-notification" translate>
 	  BUSSINESS_DATE_NOT_ENDED_MSG
 	 </div>
 	 <div class="actions float actions-end-of-day-container">
-	 	<button id="try-again" class="button green end-of-day-button" ng-click="yesClick()" translate>YES</button>
-	    <button class="button red end-of-day-button" ng-click="cancelClicked()"translate>NO</button>
+	 	<button class="button green end-of-day-button" ng-click="yesClick()" translate>YES</button>
+	    <button class="button red end-of-day-button" ng-click="cancelClicked()" translate>NO</button>
 	 </div>
 </div>
-<form name="update-settings" id="update-settings" class="modal-content form admin-form" ng-hide="isLoggedIn || !isTimePastMidnight">
+<form name="update-settings" id="update-settings" class="modal-content form admin-form" ng-if="!isLoggedIn && isTimePastMidnight">
 	<div ng-include="'/assets/partials/common/notification_message.html'"></div>
 	<p class="credentials-title" translate>ENTER_PASSWORD</p>
 	<div class="entry full-width">
@@ -28,7 +28,7 @@
 		<button type="button" id="cancel" ng-click="cancelClicked()" class="button blank modal-close" translate>CANCEL</button>
 	</div>
 </form>
-<div ng-show="isLoggedIn && !startProcess && isTimePastMidnight" class="modal-content padding-30">
+<div ng-if="isLoggedIn && !startProcess && isTimePastMidnight" class="modal-content padding-30">
 	<div ng-include="'/assets/partials/common/notification_message.html'"></div>
  <h3 translate="" class="actions-end-of-day-text" translate>END_OF_DAY</h3>
   <div class="end-of-day-message">
@@ -41,7 +41,7 @@
 		<button type="button" id="cancel" ng-click="cancelClicked()" class="button blank modal-close" translate>CANCEL</button>
 	</div>
 </div>
-<div ng-show="isLoggedIn && startProcess && isTimePastMidnight" class="modal-content new-content eod form warning">
+<div ng-if="isLoggedIn && startProcess && isTimePastMidnight" class="modal-content new-content eod form warning">
 	<h3 class="actions-end-of-day-text" translate>ARE_YOU_SURE</h3>
 	 <div class="actions float actions-end-of-day-container">
 	 	<button id="try-again" class="button green end-of-day-button" ng-click="continueClicked()" translate>CONTINUE_WITH_END_OF_DAY</button>
