CICO-29078: add getting to the hotel text field

--- a/admin/partials/stationary/adStationary.html
+++ b/admin/partials/stationary/adStationary.html
@@ -312,6 +312,11 @@
                      <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.group_confirmation_header" label="{{'CONFIRMATION_HEADER_TEXT'| translate}} " placeholder="{{'CONFIRMATION_HEADER_TEXT_PLACE_HOLDER' | translate }}" disabled="data.groupholdstatus == ''"></ad-textarea>
                      <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.group_confirmation_footer" label="{{'CONFIRMATION_FOOTER_TEXT'| translate}} " placeholder="{{'CONFIRMATION_FOOTER_TEXT_PLACE_HOLDER' | translate }}" disabled="data.groupholdstatus == ''"></ad-textarea>
                 </div>
+
+                <div class="entry full-width">
+                    <label translate>GETTING_TO_THE_HOTEL</label>
+                    <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.group_location_text"></ad-textarea>
+                </div>
             </fieldset>
 
             <!-- Group Confirmation Section -->
