Fixing listing screen

--- a/admin/partials/ftpServers/adFTPServerList.html
+++ b/admin/partials/ftpServers/adFTPServerList.html
@@ -15,12 +15,12 @@
                     <td width="25%" class="sorting" data-title="'FTP Address URL'">
                         {{ftpDetails.url}}
                     </td>
-                    <td width="14%" class="" data-title="'Username'">
+                    <td width="30%" class="" data-title="'Username'">
                         {{ftpDetails.username}}
                     </td>
-                    <td width="14%" class="" data-title="'Password'">
+<!--                     <td width="14%" class="" data-title="'Password'">
                         {{ftpDetails.password}}
-                    </td>
+                    </td> -->
                     <td width="14%" class="delete" data-title="'Delete'">
                         <a class="icons icon-delete large-icon" ng-click="deleteItem(ftpDetails.id)"></a>  
                     </td>
