--- a/guestweb/common_css/Nobu_Ryokan_Malibu/theme.less
+++ b/guestweb/common_css/Nobu_Ryokan_Malibu/theme.less
@@ -26,7 +26,9 @@ a,a:hover,.main-text,
    max-width: 85%;
     margin: 4% auto 2%;
 }
-
+.input-field {
+    background-color: white;
+}
 .template-text,.footer-text,
 .balance-amount,.phone-text,
 .phone-text:hover,.request-text,
