--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -220,5 +220,9 @@
     font-weight: 400;
     color : #9d9d9d;
     margin-left: 20px;
+} 
+//CICO-36269
+.padding-top-ta {
+  padding-top:3px  !important;
 }
 
